--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: python
-
+#version
 python:
-   -  "3.6"
-   
-install:
-   - pip install -r requirements.txt
-   - pip install coveralls
+  - "3.6"
+cache: pip
 
+install:
+  - pip install -r requirements.txt
+  - pip install coveralls
+  - pip install coverage
 script:
-  - nosetests --with-coverage --cover-package=tests
+  - nosetests --with-coverage
 
 after_success:
-- coveralls
