--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install coveralls
   - pip install coverage
 script:
-  - nosetests --with-coverage
+  - nosetests --with-coverage --cover-package=tests
 
 after_success:
   - coveralls
