--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
   - pip install coverage
+  - pip install nose
 script:
-  - nosetests --with-coverage --cover-package=tests
-
+  - nosetests --with-coverage
 after_success:
   - coveralls
