--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-API==1.0
 Flask-Testing==0.7.1
 itsdangerous==0.24
 Jinja2==2.10
+jwt
 MarkupSafe==1.0
-nose==1.3.7
-validate-email==1.3
 Werkzeug==0.14.1
+
