--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,62 @@
+alembic==0.9.9
+aniso8601==3.0.0
+astroid==1.6.3
+attrs==17.4.0
+autoenv==1.0.0
+bcrypt==3.1.4
+certifi==2018.1.18
+cffi==1.11.5
+chardet==3.0.4
 click==6.7
-Flask==1.0.2
+colorama==0.3.9
+coverage==4.5.1
+Django==1.11.3
+Flask==0.12.2
 Flask-API==1.0
+Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.3
+Flask-HTTPAuth==3.2.3
+Flask-JWT==0.3.2
+flask-marshmallow==0.8.0
+Flask-Migrate==2.1.1
+Flask-RESTful==0.3.6
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.7.1
+gunicorn==19.8.1
+idna==2.6
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
-jwt
+lazy-object-proxy==1.3.1
+Mako==1.0.7
 MarkupSafe==1.0
+marshmallow==2.15.0
+marshmallow-sqlalchemy==0.13.2
+mccabe==0.6.1
+more-itertools==4.1.0
 nose==1.3.7
+pluggy==0.6.0
+psycopg2==2.7.4
+py==1.5.3
+pycparser==2.18
+PyJWT==1.4.2
+pylint==1.8.4
+pysocks==1.6.8
+pytest==3.5.0
+python-dateutil==2.7.2
+python-editor==1.0.3
+pytz==2017.2
+rednose==1.3.0
+requests==2.18.4
+selenium==3.11.0
+six==1.11.0
+SQLAlchemy==1.2.6
+termstyle==0.1.11
+twilio==6.10.4
+urllib3==1.22
 validate-email==1.3
+virtualenv==15.1.0
+virtualenvwrapper-win==1.2.1
 Werkzeug==0.14.1
-
+wrapt==1.10.11
