--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 alembic==0.9.9
+android-backup==0.2.0
 aniso8601==3.0.0
+appdirs==1.4.3
+asn1crypto==0.24.0
 astroid==1.6.3
 attrs==17.4.0
 autoenv==1.0.0
@@ -9,7 +12,9 @@ cffi==1.11.5
 chardet==3.0.4
 click==6.7
 colorama==0.3.9
+construct==2.9.41
 coverage==4.5.1
+cryptography==2.2.2
 Django==1.11.3
 Flask==0.12.2
 Flask-API==1.0
@@ -35,9 +40,10 @@ marshmallow==2.15.0
 marshmallow-sqlalchemy==0.13.2
 mccabe==0.6.1
 more-itertools==4.1.0
+netifaces==0.10.7
 nose==1.3.7
 pluggy==0.6.0
-psycopg2==2.7.4
+pretty-cron==1.0.2
 py==1.5.3
 pycparser==2.18
 PyJWT==1.4.2
@@ -46,6 +52,7 @@ pysocks==1.6.8
 pytest==3.5.0
 python-dateutil==2.7.2
 python-editor==1.0.3
+python-miio==0.4.0
 pytz==2017.2
 rednose==1.3.0
 requests==2.18.4
@@ -53,6 +60,7 @@ selenium==3.11.0
 six==1.11.0
 SQLAlchemy==1.2.6
 termstyle==0.1.11
+tqdm==4.23.4
 twilio==6.10.4
 urllib3==1.22
 validate-email==1.3
@@ -60,3 +68,4 @@ virtualenv==15.1.0
 virtualenvwrapper-win==1.2.1
 Werkzeug==0.14.1
 wrapt==1.10.11
+zeroconf==0.20.0
